--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -9,12 +9,12 @@
         android:id="@+id/nameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:text="Name"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.648"
+        app:layout_constraintHorizontal_bias="0.641"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,11 +22,11 @@
         android:id="@+id/typeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="4dp"
         android:text="Type"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.653"
+        app:layout_constraintHorizontal_bias="0.62"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/itemCityTextView" />
 
@@ -34,8 +34,8 @@
         android:id="@+id/itemGuideDogImage"
         android:layout_width="58dp"
         android:layout_height="47dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintStart_toEndOf="@+id/itemRestaurantImage"
         app:layout_constraintTop_toBottomOf="@+id/typeTextView"
         app:srcCompat="@drawable/ic_baseline_delete_24" />
@@ -44,17 +44,18 @@
         android:id="@+id/itemAccessibleImage"
         android:layout_width="58dp"
         android:layout_height="47dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="60dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="52dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/typeTextView"
         app:srcCompat="@drawable/ic_baseline_delete_24" />
 
     <RatingBar
         android:id="@+id/ratingBar"
-        android:layout_width="238dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="16dp"
+        style="@android:style/Widget.DeviceDefault.RatingBar.Small"
+        android:layout_width="79dp"
+        android:layout_height="17dp"
+        android:layout_marginTop="28dp"
         android:clickable="false"
         android:contextClickable="false"
         android:isIndicator="true"
@@ -63,14 +64,16 @@
         android:numStars="5"
         android:progressTint="#FFEB3B"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.797"
+        app:layout_constraintHorizontal_bias="0.186"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/itemGuideDogImage" />
 
     <ImageView
         android:id="@+id/itemRestaurantImage"
-        android:layout_width="114dp"
-        android:layout_height="107dp"
+        android:layout_width="187dp"
+        android:layout_height="140dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal" />
@@ -81,6 +84,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:text="Description"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.222"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,9 +94,10 @@
         android:id="@+id/itemCityTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="20dp"
         android:text="City"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.184"
         app:layout_constraintStart_toEndOf="@+id/itemRestaurantImage"
         app:layout_constraintTop_toTopOf="@+id/nameTextView" />
 
