--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -11,31 +11,19 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Name"
-        android:textSize="16sp"
+        android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.641"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.122"
+        app:layout_constraintStart_toEndOf="@+id/itemRestaurantImage"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/typeTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="Type"
-        android:textStyle="italic"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.62"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/itemCityTextView" />
 
     <ImageView
         android:id="@+id/itemGuideDogImage"
         android:layout_width="58dp"
         android:layout_height="47dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintStart_toEndOf="@+id/itemRestaurantImage"
         app:layout_constraintTop_toBottomOf="@+id/typeTextView"
         app:srcCompat="@drawable/ic_baseline_delete_24" />
@@ -44,7 +32,7 @@
         android:id="@+id/itemAccessibleImage"
         android:layout_width="58dp"
         android:layout_height="47dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="52dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/typeTextView"
@@ -55,7 +43,7 @@
         style="@android:style/Widget.DeviceDefault.RatingBar.Small"
         android:layout_width="79dp"
         android:layout_height="17dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="20dp"
         android:clickable="false"
         android:contextClickable="false"
         android:isIndicator="true"
@@ -64,7 +52,7 @@
         android:numStars="5"
         android:progressTint="#FFEB3B"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.186"
+        app:layout_constraintHorizontal_bias="0.204"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/itemGuideDogImage" />
 
@@ -79,26 +67,40 @@
         app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal" />
 
     <TextView
-        android:id="@+id/ItemDescriptionTextView"
-        android:layout_width="366dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        android:text="Description"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.222"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
-
-    <TextView
         android:id="@+id/itemCityTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="44dp"
         android:text="City"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.184"
+        app:layout_constraintHorizontal_bias="0.092"
         app:layout_constraintStart_toEndOf="@+id/itemRestaurantImage"
         app:layout_constraintTop_toTopOf="@+id/nameTextView" />
+
+    <TextView
+        android:id="@+id/typeTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="Type"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.094"
+        app:layout_constraintStart_toEndOf="@+id/itemRestaurantImage"
+        app:layout_constraintTop_toBottomOf="@+id/itemCityTextView" />
+
+    <EditText
+        android:id="@+id/ItemDescriptionTextView"
+        android:layout_width="191dp"
+        android:layout_height="135dp"
+        android:layout_marginTop="3dp"
+        android:ems="10"
+        android:gravity="start|top"
+        android:inputType="textMultiLine"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.028"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
