--- a/app/src/main/res/layout/restaurant_map_info.xml
+++ b/app/src/main/res/layout/restaurant_map_info.xml
@@ -7,41 +7,50 @@
 
     <ImageView
         android:id="@+id/mapInfoGuideDogsAllowedImageView"
-        android:layout_width="72dp"
-        android:layout_height="65dp"
+        android:layout_width="64dp"
+        android:layout_height="42dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mapInfoImage"
         app:srcCompat="@drawable/guidedogs_allowed" />
 
     <ImageView
         android:id="@+id/mapInfoAccessibleImageView"
-        android:layout_width="72dp"
-        android:layout_height="65dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mapInfoGuideDogsAllowedImageView"
+        android:layout_width="47dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toEndOf="@+id/mapInfoGuideDogsAllowedImageView"
+        app:layout_constraintTop_toBottomOf="@+id/mapInfoImage"
         app:srcCompat="@drawable/accessible" />
 
     <TextView
-        android:id="@+id/infoTextView"
+        android:id="@+id/mapInfoType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="28dp"
         android:layout_marginTop="16dp"
         android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/mapInfoGuideDogsAllowedImageView"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/mapInfoImage"
+        app:layout_constraintTop_toBottomOf="@+id/mapInfoName" />
 
     <TextView
-        android:id="@+id/infoNameTextView"
+        android:id="@+id/mapInfoName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="16dp"
         android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/mapInfoGuideDogsAllowedImageView"
-        app:layout_constraintTop_toBottomOf="@+id/infoTextView" />
+        app:layout_constraintStart_toEndOf="@+id/mapInfoImage"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/mapInfoImage"
+        android:layout_width="73dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/common_google_signin_btn_icon_light_focused" />
 </androidx.constraintlayout.widget.ConstraintLayout>
