--- a/app/src/main/res/layout/restaurant_map_info.xml
+++ b/app/src/main/res/layout/restaurant_map_info.xml
@@ -6,55 +6,33 @@
     android:layout_height="wrap_content"
     android:background="#FFFFFF">
 
-    <ImageView
-        android:id="@+id/mapInfoGuideDogsAllowedImageView"
-        android:layout_width="64dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mapInfoImage"
-        app:srcCompat="@drawable/guidedogs_allowed" />
-
-    <ImageView
-        android:id="@+id/mapInfoAccessibleImageView"
-        android:layout_width="47dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/mapInfoGuideDogsAllowedImageView"
-        app:layout_constraintTop_toBottomOf="@+id/mapInfoImage"
-        app:srcCompat="@drawable/accessible" />
-
     <TextView
         android:id="@+id/mapInfoType"
-        android:layout_width="96dp"
-        android:layout_height="21dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="15dp"
+        android:layout_width="91dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/mapInfoImage"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mapInfoName" />
 
     <TextView
         android:id="@+id/mapInfoName"
         android:layout_width="92dp"
         android:layout_height="22dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/mapInfoImage"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/mapInfoImage"
-        android:layout_width="73dp"
-        android:layout_height="75dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <RatingBar
+        android:id="@+id/infoRatingBar"
+        style="@style/Widget.AppCompat.RatingBar.Small"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mapInfoType" />
 </androidx.constraintlayout.widget.ConstraintLayout>
